Fri Feb 29 21:16:21 UTC 2008 / Arjen de Korte <arjen@de-korte.org>

 - drivers/mge-hid.c: HID path 'UPS.PowerSummary.(Config)Voltage'
   is only indicating the 'battery.voltage(.nominal)' on specific
   models/series, ignore these otherwise.
 - drivers/usbhid-ups.h: DEFAULT_ONDELAY and DEFAULT_OFFDELAY should
   match the values mentioned in 'usbhid-ups.8'. This was changed
   (incorrectly) in r1113.

Thu Feb 28 21:10:47 UTC 2008 / Arjen de Korte <arjen@de-korte.org>

 - drivers/netxml-ups: Add 3-phase variables (based on MGE Galaxy).

Thu Feb 28 15:57:24 UTC 2008 / Arjen de Korte <arjen@de-korte.org>

 * drivers/bestups:
   - add 'input.voltage.nominal' and 'output.voltage.nominal'
   - new option 'battvoltmult' allows setting a multiplication
     factor for devices that report only a fraction of the battery
     string voltage.
   - corrected 'battery.voltage.nominal' to comply with NUT standard.
   - user overrides should be unconditional, the driver should not
     attempt to silently correct/ignore values.
   - display 'battery.charge' with resolution of one decimal (which is
     probably way more than the precision of the calculation).
   - updated man page.

Tue Feb 26 19:24:48 UTC 2008 / Arjen de Korte <arjen@de-korte.org>

 - drivers/hidparser.c: If a HID path for a report ends in 0x00000000,
   it will not be made available. These are continuations of previous
   objects (that we can't handle anyway). Instead, we will only use
   them to calculate the size of the report.
 - drivers/libhid.c: We no longer need to skip the reports above.

Mon Feb 25 20:38:45 UTC 2008 / Arjen de Korte <arjen@de-korte.org>

 - drivers/hidparser.c: Allocate twice the maximum number of reports
   we expect (MAX_REPORTS), to allow for bogus/duplicate reports.

Mon Feb 25 13:04:24 UTC 2008 / Charles Lepple <clepple@gmail.com>

 - man/Makefile.am: Include netxml-ups man page in distribution.

Mon Feb 25 12:34:32 UTC 2008 / Arnaud Quette <aquette.dev@gmail.com>
