@@ -253,35 +253,38 @@ static int authenticate(void *userdata, const char *realm, int attempt, char *us
    alarms. */
 static void ups_alarm_set(void)
 {
-	if (ups_status & STATUS_BIT(REPLACEBATT)) {
+	if (STATUS_BIT(REPLACEBATT)) {
 		alarm_set("Replace battery!");
 	}
-	if (ups_status & STATUS_BIT(SHUTDOWNIMM)) {
+	if (STATUS_BIT(SHUTDOWNIMM)) {
 		alarm_set("Shutdown imminent!");
 	}
-	if (ups_status & STATUS_BIT(FANFAIL)) {
+	if (STATUS_BIT(FANFAIL)) {
 		alarm_set("Fan failure!");
 	}
-	if (ups_status & STATUS_BIT(NOBATTERY)) {
+	if (STATUS_BIT(NOBATTERY)) {
 		alarm_set("No battery installed!");
 	}
-	if (ups_status & STATUS_BIT(BATTVOLTLO)) {
+	if (STATUS_BIT(BATTVOLTLO)) {
 		alarm_set("Battery voltage too low!");
 	}
-	if (ups_status & STATUS_BIT(BATTVOLTHI)) {
+	if (STATUS_BIT(BATTVOLTHI)) {
 		alarm_set("Battery voltage too high!");
 	}
-	if (ups_status & STATUS_BIT(CHARGERFAIL)) {
+	if (STATUS_BIT(CHARGERFAIL)) {
 		alarm_set("Battery charger fail!");
 	}
-	if (ups_status & STATUS_BIT(OVERHEAT)) {
-		alarm_set("Temperature too high!");	/* overheat; Belkin, TrippLite */
+	if (STATUS_BIT(OVERHEAT)) {
+		alarm_set("Temperature too high!");
 	}
-	if (ups_status & STATUS_BIT(COMMFAULT)) {
-		alarm_set("Internal UPS fault!");	/* UPS fault; Belkin, TrippLite */
+	if (STATUS_BIT(COMMFAULT)) {
+		alarm_set("Internal UPS fault!");
 	}
-	if (ups_status & STATUS_BIT(AWAITINGPOWER)) {
-		alarm_set("Awaiting power!");		/* awaiting power; Belkin, TrippLite */
+	if (STATUS_BIT(AWAITINGPOWER)) {
+		alarm_set("Awaiting power!");
+	}
+	if (STATUS_BIT(FUSEFAULT)) {
+		alarm_set("Fuse fault!");
 	}
 }
 
@@ -289,49 +292,47 @@ static void ups_alarm_set(void)
    status. */
 static void ups_status_set(void)
 {
-	if (ups_status & STATUS_BIT(VRANGE)) {
+	if (STATUS_BIT(VRANGE)) {
 		dstate_setinfo("input.transfer.reason", "input voltage out of range");
-	} else if (ups_status & STATUS_BIT(FRANGE)) {
+	} else if (STATUS_BIT(FRANGE)) {
 		dstate_setinfo("input.transfer.reason", "input frequency out of range");
 	} else {
 		dstate_delinfo("input.transfer.reason");
 	}
 
-	if (ups_status & STATUS_BIT(ONLINE)) {
+	if (STATUS_BIT(ONLINE)) {
 		status_set("OL");		/* on line */
 	} else {
 		status_set("OB");               /* on battery */
 	}
-	if ((ups_status & STATUS_BIT(DISCHRG)) &&
-		!(ups_status & STATUS_BIT(DEPLETED))) {
+	if (STATUS_BIT(DISCHRG) && !STATUS_BIT(DEPLETED)) {
 		status_set("DISCHRG");	        /* discharging */
 	}
-	if ((ups_status & STATUS_BIT(CHRG)) &&
-		!(ups_status & STATUS_BIT(FULLYCHARGED))) {
+	if (STATUS_BIT(CHRG) && !STATUS_BIT(FULLYCHARGED)) {
 		status_set("CHRG");		/* charging */
 	}
-	if (ups_status & (STATUS_BIT(LOWBATT) | STATUS_BIT(TIMELIMITEXP) | STATUS_BIT(SHUTDOWNIMM))) {
+	if (STATUS_BIT(LOWBATT) || STATUS_BIT(TIMELIMITEXP) || STATUS_BIT(SHUTDOWNIMM)) {
 		status_set("LB");		/* low battery */
 	}
-	if (ups_status & STATUS_BIT(OVERLOAD)) {
+	if (STATUS_BIT(OVERLOAD)) {
 		status_set("OVER");		/* overload */
 	}
-	if (ups_status & STATUS_BIT(REPLACEBATT)) {
+	if (STATUS_BIT(REPLACEBATT)) {
 		status_set("RB");		/* replace batt */
 	}
-	if (ups_status & STATUS_BIT(TRIM)) {
+	if (STATUS_BIT(TRIM)) {
 		status_set("TRIM");		/* SmartTrim */
 	}
-	if (ups_status & STATUS_BIT(BOOST)) {
+	if (STATUS_BIT(BOOST)) {
 		status_set("BOOST");	        /* SmartBoost */
 	}
-	if (ups_status & STATUS_BIT(BYPASS)) {
+	if (STATUS_BIT(BYPASS)) {
 		status_set("BYPASS");	        /* on bypass */   
 	}
-	if (ups_status & STATUS_BIT(OFF)) {
+	if (STATUS_BIT(OFF)) {
 		status_set("OFF");              /* ups is off */
 	}
-	if (ups_status & STATUS_BIT(CAL)) {
+	if (STATUS_BIT(CAL)) {
 		status_set("CAL");		/* calibration */
 	}
 }
